CSS specificity fix for deprecation notice

--- a/loc/templates/site.html
+++ b/loc/templates/site.html
@@ -17,7 +17,7 @@
         }
 
         .alert a {
-            color: #FFF;
+            color: #FFF !important;
             text-decoration: underline;
         }
 
