Make alert banner more prominent (CHRONAM-2504)

--- a/loc/templates/site.html
+++ b/loc/templates/site.html
@@ -10,7 +10,7 @@
             padding: 10px 14px;
             border-bottom: 1px solid #000;
             font: normal 11px Verdana, Arial, Helvetica, sans-serif;
-            background-color: #0076AD;
+            background-color: #D1332E;
             margin: .25rem 0 1rem;
             margin-top: 0px;
             color: #FFF;
