--- a/loc/templates/site.html
+++ b/loc/templates/site.html
@@ -38,7 +38,7 @@
 
 {% block pre_content %}
     <div class="alert" role="alert">
-        Announcement: In 2024, Chronicling America will transition to a new interface. <a href="https://www.loc.gov/collections/chronicling-america/about-this-collection/">Visit the new website</a> for the most recent newspaper additions. <a href="https://www.loc.gov/ndnp/migration/">More info</a>.
+        <b>Announcement:</b> In 2024, Chronicling America will transition to a new interface. <a href="https://www.loc.gov/collections/chronicling-america/about-this-collection/">Visit the new website</a> for the most recent newspaper additions. <a href="https://www.loc.gov/ndnp/migration/">More info »</a>.
     </div>
 {% endblock pre_content %}
 
