Update deprecation banner
Closes CHRONAM-2679

--- a/loc/templates/site.html
+++ b/loc/templates/site.html
@@ -38,7 +38,8 @@
 
 {% block pre_content %}
     <div class="alert" role="alert">
-        <b>Announcement:</b> In 2025, Chronicling America will transition to a new interface. <a href="https://www.loc.gov/collections/chronicling-america/about-this-collection/">Visit the new website</a> for the most recent newspaper additions. <a href="https://www.loc.gov/ndnp/migration/">More info »</a>.
+        <b>We're Upgrading!</b>
+        On August 4, users will experience <a href="https://www.loc.gov/collections/chronicling-america/">a new version of Chronicling America</a> with added features and tools! <a href="https://www.loc.gov/ndnp/migration/">More info »</a>.
     </div>
 {% endblock pre_content %}
 
