Add notice to API docs
Closes CHRONAM-2680

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -7,6 +7,34 @@
 
 {% block main_content %}
 <div id="std_box">
+
+<h2>Notice</h2>
+
+<p>On August 4, 2025, users will experience a new version of Chronicling America
+with added features and tools. As part of this change, the application
+programming interface (API) documentation on this page will cease to be
+relevant. Researchers who use the legacy Chronicling America API as documented
+below should transition to using the LoC.gov API at loc.gov/apis. The LoC.gov
+API enables programmatic access to the new version of Chronicling America and
+other Library of Congress digital collections.</p>
+
+<p>Bulk OCR downloads for Chronicling America can be accessed from the
+longstanding OCR Data page until further notice when a new "Datasets" page will
+be made available on the new site.</p>
+
+<p><a href="https://www.loc.gov/ndnp/migration/">More information about the Chronicling America migration is available.</a></p>
+
+<h3>Quick Links for LoC.gov API and Bulk Data Users</h3>
+
+<ul>
+    <li>
+        <a href="https://www.loc.gov/apis">APIs for LoC.gov documentation (General API documentation)</a>
+    </li>
+    <li>
+        <a href="https://guides.loc.gov/chronicling-america/additional-features#s-lib-ctab-26634726-2">Guide to Newspaper Datasets and API Access (API tutorials specific to the new Chronicling America site)</a>
+    </li>
+</ul>
+
 <h2>Introduction</h2>
 <p>Chronicling America provides access to information about historic
 newspapers and select digitized newspaper pages.  To encourage a wide
