Add more links to API docs

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -10,17 +10,25 @@
 
 <h2>Notice</h2>
 
-<p>On August 4, 2025, users will experience a new version of Chronicling America
-with added features and tools. As part of this change, the application
-programming interface (API) documentation on this page will cease to be
-relevant. Researchers who use the legacy Chronicling America API as documented
-below should transition to using the LoC.gov API at loc.gov/apis. The LoC.gov
-API enables programmatic access to the new version of Chronicling America and
-other Library of Congress digital collections.</p>
+<p>
+    On August 4, 2025, users will experience <a
+    href="https://www.loc.gov/collections/chronicling-america/about-this-collection/">a
+    new version of Chronicling America</a>
+    with added features and tools. As part of this change, the application
+    programming interface (API) documentation on this page will cease to be
+    relevant. Researchers who use the legacy Chronicling America API as
+    documented below should transition to using the LoC.gov API at <a
+    href="https://www.loc.gov/apis">loc.gov/apis</a>. The LoC.gov API enables
+    programmatic access to the new version of Chronicling America and other
+    Library of Congress digital collections.
+</p>
 
-<p>Bulk OCR downloads for Chronicling America can be accessed from the
-longstanding OCR Data page until further notice when a new "Datasets" page will
-be made available on the new site.</p>
+<p>
+    Bulk OCR downloads for Chronicling America can be accessed from the
+    longstanding <a href="https://chroniclingamerica.loc.gov/ocr/">OCR Data
+    page</a> until further notice when a new "Datasets" page will be made
+    available on the new site.
+</p>
 
 <p><a href="https://www.loc.gov/ndnp/migration/">More information about the Chronicling America migration is available.</a></p>
 
